--- a/css/form.css
+++ b/css/form.css
@@ -24,12 +24,14 @@ h2{
 	font-size:30px;
 	margin-top:1rem;
 	margin-bottom:1rem;
+	padding-bottom:2%;
+	padding-top:2%;
 }
 
 
 p{
 	font-family: 'Indie Flower', cursive;
-	font-size:1rem;
+	font-size:1.5rem;
 }
 
 
@@ -144,8 +146,11 @@ input[type=date]{
 	margin:1rem 0.5rem 1rem 0.5rem;
 	background-color:#4CFFD1;
 	display:block;
-	
+	width:160px;
+	height:44px;
 }
+
+
 
 input[type=submit],
 input[type=reset]{
@@ -155,6 +160,8 @@ input[type=reset]{
 	margin:1rem 0.5rem 1rem 0.5rem;
 	background-color:#4CFFD1;
 	display:block;
+	width:80px;
+	height:44px;
 	}
 
 
